2010-05-16  Kent Tamura  <tkent@chromium.org>

Reviewed by Dimitri Glazkov.

        [DRT/Chromium] Fix repaint, WebGL, textarea tests
        https://bugs.webkit.org/show_bug.cgi?id=39054

        * DEPS: Update to Chromium r47248 to use a fix for CommandLine assertion
          and textAreaResizeCorner.png
        * WebKit.gyp: Add textAreaResizeCorner.png as a Mac resource
        * features.gypi: Enable ENABLE_3D_CANVAS.
2010-05-16  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        [DRT/Chromium] Fix repaint, WebGL, textarea tests
        https://bugs.webkit.org/show_bug.cgi?id=39054

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::canvas): Remove m_paintRect initialization in canvas().
         This line updated m_paintRect unexpectedly during paintRect().
         We don't need to initialize m_paintRect because show() does it.

Canonical link: https://commits.webkit.org/50711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59571 268f45cc-cd09-0410-ab3c-d52691b4dbfc