WebKit/chromium/WebKit.gyp
@@ -587,6 +587,7 @@
                         '../../WebKitTools/DumpRenderTree/fonts/WebKitWeightWatcher700.ttf',
                         '../../WebKitTools/DumpRenderTree/fonts/WebKitWeightWatcher800.ttf',
                         '../../WebKitTools/DumpRenderTree/fonts/WebKitWeightWatcher900.ttf',
+                        '<(SHARED_INTERMEDIATE_DIR)/webkit/textAreaResizeCorner.png',
                     ],
                     'actions': [
                         {
